m/mobile.css
.container {
    width: 89.7435897vw;
    margin-left: auto;
    margin-right: auto;
}

header {
    box-sizing: border-box;
    padding: 10px 24px;
}

header svg {
    flex: 0 0 auto;
}

img {
    width: 100%;
    object-fit: cover;
}

#main-block{
    /* height: 56.8720379vh; */
    margin-bottom: 20%;
}

.img-overlay {
    position: absolute;
    bottom: 05.33175355vh;
    /*261px*/
    left: 10vw;
    /*20px*/
}

.block {
    margin-bottom: 03.79146919vh;
}

.m-btn {
    width: 27.9487179vw;
    height: 32px;
}

.cards {
    gap: 01.75vh;
}

.card img, .card{
    position: relative;
    height: 20.97156398vh;
}

.adv1-txt {
    left: 04.1025641vw;
    /* bottom: 01.89573459vh; */
    bottom: 12px;
}

.adv2-icons svg:first-child,
.adv2-icons svg:last-child {
    width: 70%;
}

.adv2-icons svg:last-child {
    transform: translate(-48%, -90%);
}

.adv2-inf {
    position: absolute;
    right: 03.07692307vw;
    top: 01.4218009vh;
}

.facts {
    /* gap: 01.4218009vh */
    gap: clamp(12px, 01.4218009vh, 16px)
}

.fact {
    width: 100%;
    gap: 0px;
}

#call {
    padding: 01.89573459vh 04.1025641vw;
    background-color: #E5F1FA;
}

.nav-items {
    margin-top: 10px;
    gap: 5px;
}

#cards-overlay{
    background-color: white;

    padding: 16px;
}

.slider ul img {
    position: absolute;
    float: left;
    display: inline-block;
    margin: 0;
    padding: 0;
    width: 100%;
    height: 166px;
    text-align: center;
    line-height: 300px;
    object-fit: fill;
}

.slider ul {
    position: relative;
    width: 100%;
    margin: 0;
    padding: 0;
    height: 200px;
    display: inline-block;
    list-style: none;
}

.control {
    position: absolute;
    top: 40%;
    z-index: 999;
    display: block;
    padding: 4% 3%;
    width: auto;
    height: auto;
    background: #2a2a2a;
    color: #fff;
    text-decoration: none;
    font-weight: 600;
    font-size: 18px;
    opacity: 0.8;
    cursor: pointer;
}

.prev {
    left: 0px;
}

.next {
    right: 0px;
}

.slider {
    position: relative;
    width: 100%;
    overflow: hidden;
}

.slider-arrow{
    width: 25px;
    height: 25px;

    top: 50%;
    transform: translate(0, -50%);
}
.slider-arrow svg{
    width: 100%;
    height: 100%;
}

